template/bot/bot-agent-storage-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: bot
    role: agent-storage
  name: bot-agent-storage
  namespace: bot
spec:
  ports:
  - name: bot
    port: 8080
  selector:
    app: bot
    role: agent-storage
