template/bot/bot-connector-hipchat-db-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: bot
  name: bot-connector-hipchat-db
  namespace: bot
spec:
  ports:
  - port: 6380
  selector:
    app: bot
    role: connector-hipchat-db
