template/bot/bot-master-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: bot
    role: master
  name: bot-master
  namespace: bot
spec:
  ports:
  - name: master
    port: 8080
  selector:
    app: bot
    role: master
